plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.13'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.wanted'
version = '0.0.1-SNAPSHOT'
description = 'project-module2-lms'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

// ??security ?ㅼ젙??異붽??섎㈃ ?곕줈 ?ㅼ젙?섏? ?딆븘??濡쒓렇?명솕硫댁쿂??蹂댁엫.
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
    // Source: https://mvnrepository.com/artifact/org.modelmapper/modelmapper
    implementation("org.modelmapper:modelmapper:3.1.1")

    // thymeleaf-extras-springsecurity6: https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity6
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    // AoP 濡쒓렇
    // Source: https://mvnrepository.com/artifact/org.springframework/spring-aop
    implementation("org.springframework:spring-aop:5.3.39")

    // 硫붿씪 ?꾩넚
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.apache.pdfbox:pdfbox:3.0.3'
}

tasks.named('test') {
    useJUnitPlatform()
}
